# plutus-minting-collection

./: .gitignore  LICENSE  plutus-minting-collection.cabal
src/MintingCollection/: Main.hs  NFT.hs  Validator.hs
test/: Spec.hs
